# RPM

./: Cargo.toml  README.md  WINDOWS_SETUP.md  install-service.bat
.claude/: settings.local.json
examples/: demo.py  usage.md
src/: cli.rs  config.rs  daemon.rs  daemon_main.rs  error.rs  ipc.rs  lib.rs  main.rs  process.rs  ui.rs
