[package]
name = "rpm"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A cross-platform process manager written in Rust"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rpm"
path = "src/main.rs"

[[bin]]
name = "rpm-daemon"
path = "src/daemon_main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
libc = "0.2"
colored = "2.1"
comfy-table = "7.1"
indicatif = "0.17"
crossterm = "0.27"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winapi = { version = "0.3", features = ["winsvc", "winbase", "processthreadsapi", "psapi"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[dev-dependencies]
tempfile = "3.8"
